--- a/Cours_RI_part1.ipynb
+++ b/Cours_RI_part1.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Cours Introduction à la Recherche d'Information à l'N7"
+    "# Cours Introduction à la Recherche d'Information"
    ]
   },
   {
