--- a/CoursRI_DeepLearning_Text_V1.ipynb
+++ b/CoursRI_DeepLearning_Text_V1.ipynb
@@ -32,7 +32,7 @@
       },
       "source": [
         "## Quelques commandes pour le traitement d'un texte\n",
-        "Traiter un texte revient à mettre le texte en minusule, spliter le textes en mots (tockenization), compter chaque mot, construire un dictionnaire (le vocabulaire regroupant tous les mots), puis indexer les mots (donner un indice à chaque mot) pour faciliter sa manipulation. "
+        "Traiter un texte revient à mettre le texte en minuscule, spliter le textes en mots (tockenization), compter chaque mot, construire un dictionnaire (le vocabulaire regroupant tous les mots), puis indexer les mots (donner un indice à chaque mot) pour faciliter sa manipulation. "
       ]
     },
     {
