--- a/CoursRI_DeepLearning_Text_V1.ipynb
+++ b/CoursRI_DeepLearning_Text_V1.ipynb
@@ -16,7 +16,7 @@
         "id": "5koFMUyb6r__"
       },
       "source": [
-        "# Cours sur Deep learning pour du Texte. \n",
+        "# Cours sur Deep learning pour le Texte. \n",
         "Une bonne partie des algorithmes ci dessous sont pris de (https://www.manning.com/books/deep-learning-with-python-second-edition?a_aid=keras&a_bid=76564dff). \n",
         "\n",
         "Vous pourrez aussi accéder au GitHub du livre.\n",
